--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
     <!-- Insert your message below here -->
 
+	          <!-- Message from hanzala-->
+        <div class="w3-panel w3-card-4 w3-light-grey" style="width:50%">
+          <p class=" w3-large w3-serif">
+          <i class="fa fa-quote-right w3-xxlarge w3-text-red"></i><br>
+            A very easy to follow git tutorial it is.
+        </p>
+        </div>
+        <!-- End message from hanzala -->
+
     <!-- Message from anther1991-->
     <div class="w3-panel w3-green w3-topbar w3-bottombar w3-border-amber w3-padding-16">
       <h2 class="w3-opacity">Love all of your hard works, W3schools &lt;3 &lt;3 &lt;3 <br/>
